Gateway/Production/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-gateway
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-gateway"
spec:
  gatewayClassName: kong-gateway-class
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "cinephoria.lol"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: kong-gateway-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      protocol: HTTP
      port: 80
      hostname: "cinephoria.lol"
      allowedRoutes:
        namespaces:
          from: All
